--- a/inventory_management/templates/inventory/add.html
+++ b/inventory_management/templates/inventory/add.html
@@ -1,17 +1,13 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>Inventory Management System</title>
     <script>
-        function submitForm() {
-            document.getElementById('add-user-form').submit();
-        }
         document.addEventListener("DOMContentLoaded", function() {
             {% if messages %}
                 {% for message in messages %}
@@ -42,33 +38,6 @@
 
     .container {
         padding: 1rem 2rem;
-        display: flex;
-        justify-content: center;
-    }
-
-    form {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-items: center;
-        align-items: center;
-    }
-
-    .mb-3 {
-        width: 100%;
-    }
-
-    .mb-3 input {
-        margin: 1rem 1.5rem;
-    }
-
-    .mb-3 label {
-        margin: 1rem 1rem;
-        width: 100px;
-    }
-
-    .mb-3 input[type=checkbox] {
-        width: 15px;
-        height: 15px;
     }
 
     .form-group {
@@ -83,10 +52,6 @@
         display: flex;
         margin: 20px 0px;
         justify-content: space-between;
-        padding: 1rem 2rem;
-        left: 10px;
-        bottom: 10px;
-        width: 100%;
     }
 
     .admin-links { 
@@ -110,13 +75,7 @@
             padding: 0.5rem;
         }
 
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .mb-3{
+        .mt-3{
             width: auto;
             align-items: center;
         }
@@ -129,7 +88,11 @@
             padding: 0.25rem 0.5rem;
             width: 100px;
         }
-
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 </style>
 
@@ -177,37 +140,47 @@
           <a class="navbar-brand" href="{% url 'inventory:profile' %}">{{  user.first_name|upper }} {{ user.last_name|capfirst }}</a>
         </div>
       </nav>
-    <h4 style="padding: 0.5rem 1rem; font-weight: 600;"><i class="fa-solid fa-house" style="font-size: 1.2rem;"></i> Add User</h4>
+
+    <h4 style="padding: 0.5rem 1rem; font-weight: 600;"><i class="fa-solid fa-house" style="font-size: 1.2rem;"></i> Add Category</h4>
     <hr style="margin: 0 1rem; color: #303030;">
     <div class="container">
-        <form method="POST" action="{% url 'inventory:add_user' %}" id="add-user-form">
+        <form action="{% url 'inventory:add' %}" method="POST">
             {% csrf_token %}
             <div class="mb-3">
-                <label for="first_name">First Name:</label>
-                <input type="text" id="first_name" name="first_name" required><br>
-            </div>
-            <div class="mb-3">
-                <label for="last_name">Last Name:</label>
-                <input type="text" id="last_name" name="last_name" required>
-            </div>
-            <div class="mb-3">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-            </div>
-            <div class="mb-3"></div>
-            <div class="mb-3">
-                <label for="is_staff">Staff:</label>
-                <input type="checkbox" id="is_staff" name="is_staff" required>
-            </div>
-            <div class="mb-3">
-                <label for="is_superuser">Superuser:</label>
-                <input type="checkbox" id="is_superuser" name="is_superuser">
+                <label for="category_name" class="form-label
+                {% if form.category_name.errors %} text-danger {% endif %}">Category Name</label>
+                <input type="text" class="form-control" id="category_name" name="category_name" value="{{ form.category_name.value }}"><br>
+                <textarea class="form-control" id="category_description" name="category_description" rows="5" placeholder="Category Description"></textarea>
+                {% for error in form.category_name.errors %}
+                <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+                <br>
+                <button type="submit" class="btn btn-primary" style="float: right;">Add Category</button>
             </div>
         </form>
-    </div>
-    <div class="form-button">
-        <a href="{% url 'inventory:dashboard' %}" class="btn btn-danger" style="width: 130px; !important">Back to Dashboard</a>
-        <button type="submit" form="add-user-form" class="btn btn-primary">Add User</a>
+        <br>
+        <hr style="padding: 0 1rem; color: #303030;">
+        <form action="{% url 'inventory:add' %}" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <div class="form-index">
+                    <label for="name">Item Name:</label><br>
+                    <input type="text" id="name" name="name" style = "width:200px; height: 40px; font-size: 15px;" required>
+                </div>
+                <div class="form-index">
+                    <label for="category">Category:</label>
+                    <select id="category" name="category" class="form-select" style = "width:200px; height: 40px; font-size: 15px;!important"required>
+                        {% for category in categories %}
+                        <option value="{{ category.id }}">{{ category.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div class="form-button">
+                <a href="{% url 'inventory:dashboard' %}" class="btn btn-danger" style="width: 130px; !important">Back to Dashboard</a>
+                <button type="submit" class="btn btn-primary">Add Item</button>
+            </div>
+        </form>
     </div>
 </body>
 </html>
