--- a/inventory_management/templates/inventory/edit_profile.html
+++ b/inventory_management/templates/inventory/edit_profile.html
@@ -7,63 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        * {
-            width: auto;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        body {
-            height: auto;
-            margin: 0;
-        }
-      
-        body header{
-            text-align: center;
-            align-content: center;
-            height: 100px;
-            background-color: #74A12E;
-            color: white;
-        }
-        .container {
-            padding: 1rem;
-        }
-        .profile-header {
-            text-align: center;
-        }
-
-        .admin-links { 
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-        }
-        .admin-links a { 
-            margin-right: 10px; 
-            text-decoration: none;
-            color: white;
-            padding: 0 15px;
-        }
-
-        form {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            justify-items: center;
-            align-items: center;
-        }
-
-        .mb-3 {
-            width: 70%;
-        }
-
-        .btn-primary, .btn-danger {
-            width: 150px;
-        }
-        @media (min-width: 992px) {
-            .container, .container-lg, .container-md, .container-sm {
-                max-width: 100%;
-            }
-        }
-    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            {% if messages %}
+                {% for message in messages %}
+                    alert("{{ message }}");
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
 </head>
+
+<style>
+    * {
+        width: auto;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    body {
+        height: auto;
+        margin: 0;
+    }
+  
+    body header{
+        text-align: center;
+        align-content: center;
+        height: 100px;
+        background-color: #74A12E;
+        color: white;
+    }
+    .container {
+        padding: 1rem;
+    }
+    .profile-header {
+        text-align: center;
+    }
+
+    .admin-links { 
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .admin-links a { 
+        margin-right: 10px; 
+        text-decoration: none;
+        color: white;
+        padding: 0 15px;
+    }
+
+    form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .mb-3 {
+        width: 70%;
+    }
+
+    .btn-primary, .btn-danger {
+        width: 150px;
+    }
+    @media (min-width: 992px) {
+        .container, .container-lg, .container-md, .container-sm {
+            max-width: 100%;
+        }
+    }
+</style>
+
 <body>
     <header>
         <h1>Inventory Management System</h1>
@@ -78,26 +89,46 @@
           <div class="admin-links">
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_category' %}">Add Category</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_item' %}">Add Item</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_user' %}">Add User</a>
-                  </li>
-                  <li>
-                    {% comment %}<a href="{% url 'inventory:logout' %}">Logout</a>{% endcomment %}
-                  </li>
-                </ul>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:add' %}">Add</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:display' %}">Item Display</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:add_user' %}">Add User</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:display_users' %}">Display User</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:barcode_scan' %}">Barcode Scan</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'inventory:history' %}">History</a>
+                    </li>
+                    <li class="nav-item">
+                      <form method="POST" action="{% url 'inventory:logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-link nav-link" style="display: inline; padding: 0; border: none; background: none;">Logout</button>
+                    </form>
+                    </li>
+                  </ul>
               </div>
           </div>
           {% endif %}
-          <a class="navbar-brand" href="#">{{ user.username }}</a>
+          <a class="navbar-brand" href="{% url 'inventory:profile' %}">{{  user.first_name|upper }} {{ user.last_name|capfirst }}</a>
         </div>
       </nav>
     <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
         <h4 style="padding: 0.5rem 1rem; font-weight: 600;"><i class="fa-solid fa-user" style="font-size: 1.2rem;"></i> Edit Profile</h4>
         <hr style="margin: 0 1rem; color: #303030;">
         <form method="POST" enctype="multipart/form-data">
@@ -116,37 +147,27 @@
             </div>
             <div class="mb-3">
                 <label for="gender" class="form-label">Gender</label>
-                <select id="gender" name="gender" value="{{ user.userprofile.birth_date }}" class="form-control">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Other</option>
+                <select class="form-select" id="gender" name="gender" required>
+                    <option value="M" {% if user.gender == "M" %}selected{% endif %}>Male</option>
+                    <option value="F" {% if user.gender == "F" %}selected{% endif %}>Female</option>
                 </select>
             </div>
             <div class="mb-3">
                 <label for="birth_date" class="form-label">Birth Date</label>
-                <input type="date" class="form-control" id="birth_date" name="birth_date" value="{{ user.userprofile.birth_date }}">
+                <input type="date" class="form-control" id="birth_date" name="birth_date" value="{{ user.birth_date }}" required>
             </div>
+            <h5>Change Password</h5>
+            {{ password_form.as_p }}
             <div class="mb-3">
                 <label for="team" class="form-label">Team</label>
-                <select id="team" name="team" value="{{ user.userprofile.birth_date }}" class="form-control">
-                    <option value="Logistic">Logistic</option>
-                    <option value="Stock">Stock</option>
-                    <option value="Technical">Technical</option>
+                <select class="form-select" id="team" name="team" required>
+                    <option value="Admin" {% if user.team == "Admin" %}selected{% endif %}>Admin</option>
+                    <option value="Logistic" {% if user.team == "Logistic" %}selected{% endif %}>Logistic</option>
                 </select>
             </div>
             <a href="{% url 'inventory:profile' %}" class="btn btn-danger">Cancel</a>
             <button type="submit" class="btn btn-primary">Save Changes</button>
         </form>
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% block content %}{% endblock %}
     </div>
 </body>
 </html>
