--- a/inventory_management/templates/inventory/login.html
+++ b/inventory_management/templates/inventory/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Inventory Management System</title>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            {% if messages %}
+                {% for message in messages %}
+                    alert("{{ message }}");
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
 </head>
 <style>
   * {
@@ -56,6 +65,16 @@
   button {
       width: 250px;
   }
+  @media (min-width: 992px) {
+      .container, .container-lg, .container-md, .container-sm {
+          max-width: 100%;
+      }
+  }
+  @media (max-width: 430px) {
+      .container form .mb-3 {
+          width: 300px;
+      }
+  }
 </style>
 
 <body>
@@ -70,7 +89,7 @@
               <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
             </div>
             <div class="mb-3">
-                <br><label for="exampleInputPassword1" class="form-label">Password</label>
+                <br><label for="exampleInputPassword1" class="form-label">Password</label><br>
                 <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Password">
             </div>
             <div class="mb-3 form-check">
@@ -79,16 +98,6 @@
             </div>
             <br><button type="submit" class="btn btn-primary" name="login">Log in</button>
         </form>
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% block content %}{% endblock %}
     </div>
 </body>
 </html>
