--- a/inventory_management/templates/inventory/profile.html
+++ b/inventory_management/templates/inventory/profile.html
@@ -8,13 +8,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function editProfile(user) {
+            console.log(user);
+            document.getElementById('edit-first-name').value = user.first_name || '';
+            document.getElementById('edit-last-name').value = user.last_name || '';
+            document.getElementById('edit-email').value = user.email || '';
+        }
+        function showMessage(message) {
+            const messageDiv = document.getElementById('message');
+            messageDiv.innerText = message;
+            messageDiv.style.display = 'block';
+            setTimeout(() => {
+                messageDiv.style.display = 'none';
+            }, 3000); // Hide after 3 seconds
+        }
+    </script>
     <style>
         * {
             width: auto;
             font-family: Arial, Helvetica, sans-serif;
         }
         body {
-            height: auto;
+            height: 100%%;
             margin: 0;
         }
       
@@ -67,33 +83,45 @@
     </header>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          {% if user.is_staff or user.is_superuser %}
-          <div class="admin-links">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_category' %}">Add Category</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_item' %}">Add Item</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'inventory:add_user' %}">Add User</a>
-                  </li>
-                  <li>
-                    {% comment %}<a href="{% url 'inventory:logout' %}">Logout</a>{% endcomment %}
-                  </li>
-                </ul>
-              </div>
-          </div>
-          {% endif %}
-          <a class="navbar-brand" href="#">{{ user.username }}</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            {% if user.is_staff or user.is_superuser %}
+            <div class="admin-links">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:add' %}">Add</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:display' %}">Item Display</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:add_user' %}">Add User</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:display_users' %}">Display User</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:barcode_scan' %}">Barcode Scan</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'inventory:history' %}">History</a>
+                        </li>
+                        <li class="nav-item">
+                          <form method="POST" action="{% url 'inventory:logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link" style="display: inline; padding: 0; border: none; background: none;">Logout</button>
+                        </form>
+                        </li>
+                      </ul>
+                </div>
+            </div>
+            {% endif %}
+            <a class="navbar-brand" href="{% url 'inventory:profile' %}">{{  user.first_name|upper }} {{ user.last_name|capfirst }}</a>
         </div>
-      </nav>
+    </nav>
+    <div id="message"></div>
     <h4 style="padding: 0.5rem 1rem; font-weight: 600;"><i class="fa-solid fa-user" style="font-size: 1.2rem;"></i> Profile</h4>
     <hr style="margin: 0 1rem; color: #303030;">
     <div class="container">
@@ -102,24 +130,55 @@
             <p>Last Name:</p>
             <p>UserName:</p>
             <p>Email:</p>
-            <p>Gender:</p>
-            <p>Birth Date:</p>
-            <p>Team:</p>
+            <p>Admin:</p>
+            <p>Staff:</p>
         </div>
         <div class="profile-info">
-            <p>{{ user.first_name|default:"N/A" }}</p>
-            <p>{{ user.last_name|default:"N/A" }}</p>
+            <p>{{ user.first_name|upper|default:"N/A" }}</p>
+            <p>{{ user.last_name|capfirst|default:"N/A" }}</p>
             <p>{{ user.username|default:"N/A" }}</p>
             <p>{{ user.email|default:"N/A" }}</p>
-            <p>{{ user.userprofile.gender|default:"N/A" }}</p>
-            <p>{{user.userprofile.birth_date|default:"N\A"}}</p>
-            <p>{{ user.userprofile.birth_date|default:"N/A" }}</p>
+            <p>{% if user.is_staff %}Yes{% else %}No{% endif %}</p>
+            <p>{% if user.is_superuser %}Yes{% else %}No{% endif %}</p>
         </div>
      </div>
-     <div class="foot-button">
-        <a href="{% url 'inventory:dashboard' %}" class="btn btn-danger">Back to Dashboard</a>
-        <a href="{% url 'inventory:edit_profile' %}" class="btn btn-primary">Edit Profile</a>
-     </div>
-
+         <div class="offcanvas offcanvas-end" id="editProfileCanvas">
+        <div class="offcanvas-header">
+            <h4>Edit Profile</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <form method="POST" action="{% url 'inventory:profile' %}">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="edit-first-name" class="form-label">First Name</label>
+                    <input type="text" class="form-control" id="edit-first-name" name="first_name">
+                </div>
+                <div class="mb-3">
+                    <label for="edit-last-name" class="form-label">Last Name</label>
+                    <input type="text" class="form-control" id="edit-last-name" name="last_name">
+                </div>
+                <div class="mb-3">
+                    <label for="edit-email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="edit-email" name="email">
+                </div>
+                <div class="mb-3">
+                    <label for="edit-user-password" class="form-label">Password</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+                <div class="mb-3">
+                    <label for="edit-user-cdonfirm_password" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" name="confirm_password">
+                </div>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+            </form>
+        </div>
+    </div>
+    <footer>
+        <div class="foot-button">
+            <a href="{% url 'inventory:dashboard' %}" class="btn btn-danger">Back to Dashboard</a>
+            <a href="javascript:void(0);" class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#editProfileCanvas" onclick="editProfile({ first_name: '{{ user.first_name }}', last_name: '{{ user.last_name }}', gender: '{{ user.gender }}', birth_date: '{{ user.birth_date }}', team: '{{ user.team }}' })">Edit Profile</a>
+        </div>
+    </footer>
 </body>
 </html>
