Update the navbar, add the jquery in display item and user, add the button to export excel file into that as well

--- a/inventory_management/templates/inventory/barcode_scan.html
+++ b/inventory_management/templates/inventory/barcode_scan.html
@@ -230,7 +230,7 @@
                     <li class="nav-item">
                       <form method="POST" action="{% url 'inventory:logout' %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-link nav-link" style="display: inline; padding: 0; border: none; background: none;">Logout</button>
+                        <button type="submit" class="btn btn-link nav-link" style="margin: 0px 15px;border: none; background: none; padding: 0; color: white;">Logout</button>
                     </form>
                     </li>
                   </ul>
