--- a/inventory_management/templates/inventory/profile.html
+++ b/inventory_management/templates/inventory/profile.html
@@ -75,6 +75,21 @@
                 max-width: 100%;
             }
         }
+        @media (max-width: 430px) {
+            .container {
+                padding: 0.5rem;
+            }
+            .foot-button {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+            }
+            .btn {
+                font-size: 0.8rem;
+                padding: auto;
+                width: 140px;
+            }
+        }
     </style>
 </head>
 <body>
