Update name contributor

--- a/inventory_management/templates/inventory/dashboard.html
+++ b/inventory_management/templates/inventory/dashboard.html
@@ -238,7 +238,7 @@
         </div>
         <div class="contributor">
           <img src="{{ MEDIA_URL }}contributor_image/reaksmey.JPG" alt="SOM Chanreaksmey">
-          <h5>SOM Chanreaksmey</h5>
+          <h5>SOM Chann Reaksmey</h5>
           <p>Web Developer</p>
         </div>
         <div class="contributor">
